# alphastack

./: .dockerignore  .gitignore  ANALYSIS_ARCHITECTURE.md  ANALYSIS_DEMO_TO_LIVE.md  ANALYSIS_ENGINE.md  ANALYSIS_FRONTEND.md  ANALYSIS_INTEGRATION.md  ANALYSIS_QUALITY.md  ANALYSIS_SECURITY.md  ANALYSIS_SETUP.md  ANALYSIS_STRATEGY_BUILD.md  ANALYSIS_STRATEGY_REVIEW.md  ANALYSIS_TECH_STACK.md  Dockerfile  Dockerfile.minimal  FIX_MOBILE_BUILD_SUMMARY.md  INSTALL.md  LICENSE  Procfile  README.md  RELEASE.md  REVIEW_AI_STRATEGY.md  REVIEW_ARCHITECTURE.md  REVIEW_SECURITY.md  architecture_agent_communication.md  architecture_ai_models.md  architecture_compliance.md  architecture_data.md  architecture_database.md  architecture_memory.md  architecture_monitoring.md  architecture_ui_desktop.md  architecture_ui_web.md  fly.toml  install.ps1  install.sh  live_server.py  minimal_test.py  mock_server.py  monitor.sh  (+6 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: commands.rs  main.rs
architecture/: README.md  architecture_agent_communication.md  architecture_ai_models.md  architecture_alternative_data.md  architecture_backtesting.md  architecture_branding.md  architecture_broker.md  architecture_broker_routing.md  architecture_channels.md  architecture_competitor_analysis.md  architecture_cost_model.md  architecture_crypto.md  architecture_curriculum_cs.md  architecture_curriculum_economics.md  architecture_curriculum_integration.md  architecture_curriculum_math.md  architecture_curriculum_statistics.md  architecture_data.md  architecture_data_storage.md  architecture_database.md  architecture_deployment.md  architecture_documentation.md  architecture_execution_algorithms.md  architecture_future_tech.md  architecture_market_focus.md  architecture_market_regime.md  architecture_memory.md  architecture_mexc_integration.md  architecture_ml_pipeline.md  architecture_model_selection.md  architecture_monitoring.md  architecture_multi_agent.md  architecture_pair_strategy.md  architecture_performance.md  architecture_risk.md  architecture_scalability.md  architecture_security.md  architecture_strategy_flow.md  architecture_system.md  architecture_tca.md  (+7 more)
config/: alphastack.yaml  strategy_params.yaml
docs/: COUNCIL_FIXES.md  COUNCIL_FOREX_ARCHITECTURE.md  COUNCIL_FOREX_ENGINEERING.md  COUNCIL_FOREX_RISK.md  COUNCIL_REVIEW.md  DECISION_COUNCIL.md  FIX_RESULTS_APP_DATA.md  FIX_RESULTS_APP_UI.md  FIX_RESULTS_BACKEND.md  FIX_RESULTS_FEATURES.md  FOREX_MT5_INTEGRATION.md  IMPL_DEBATE.md  IMPL_LOOP.md  IMPL_MEMORY.md  IMPL_MIMO.md  IMPL_MODEL_AGNOSTIC.md  IMPL_REFLECTION.md  IMPL_SELF_REFLECTION.md  IMPL_TELEGRAM.md  RESEARCH_HERMES.md  RESEARCH_LOOPS_HERMES.md  RESEARCH_OPENCLAW.md  SWARM_ARCHITECTURE.md  SWARM_DESIGN.md  TEST_RESULTS_APP.md  TEST_RESULTS_BACKEND.md  TEST_RESULTS_INTEGRATION.md  TEST_RESULTS_STRATEGY.md  _config.yml  agent_config_analysis.md  agent_config_guide.md  alphastack_executive_summary.md  alphastack_full_research.md  flow_design.html  generate_pdf.py  index.html  install  install.ps1
fastlane/: Appfile  Fastfile
fixes/: fix_agi_readiness.md  fix_audit_logging.md  fix_auth_session.md  fix_auth_tokens.md  fix_backtesting.md  fix_broker_disconnect.md  fix_compliance.md  fix_confluence_scoring.md  fix_cross_platform_testing.md  fix_curriculum_gaps.md  fix_data_flow.md  fix_drawdown_deescalation.md  fix_error_handling.md  fix_learning_loops.md  fix_market_data.md  fix_monitoring.md  fix_mt5_integration.md  (+15 more)
src/rust_core/: Cargo.toml
src/rust_core/src/: backtest_engine.rs  indicators.rs  lib.rs  order_book.rs  risk_calculator.rs  signal_compute.rs  tick_processor.rs
(+470 files in other folders)
