[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alphastack"
version = "0.1.0"
description = "AlphaStack – Multi-Agent AI Trading System"
requires-python = ">=3.12"
license = {text = "Proprietary"}

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.14.0",
    # Redis
    "redis[hiredis]>=5.2.0",
    # Validation / settings
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    # Broker integrations
    "ccxt>=4.4.0",
    # ML / AI
    "torch>=2.5.0",
    "scikit-learn>=1.6.0",
    "onnxruntime>=1.20.0",
    # Data
    "pandas>=2.2.0",
    "numpy>=2.1.0",
    # Agent framework
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    # Observability
    "prometheus-client>=0.21.0",
    "structlog>=24.4.0",
    # Utilities
    "pyyaml>=6.0.2",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.1",
    # Security (used by security/auth.py and security/encryption.py)
    "argon2-cffi>=23.1.0",
    "PyJWT>=2.10.0",
    "pyotp>=2.9.0",
    "cryptography>=44.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
broker-mt5 = [
    "MetaTrader5>=5.0.51",  # Windows-only
]
data-talib = [
    "ta-lib>=0.6.0",  # Requires C ta-lib library
]

[tool.hatch.build.targets.wheel]
packages = ["src/alphastack"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
