[package]
name = "alphastack_rust_core"
version = "0.2.0"
edition = "2021"
description = "AlphaStack high-performance Rust core — tick processing, indicators, signals, risk, backtesting"
license = "MIT"

[lib]
name = "alphastack_rust_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py310"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
ndarray = { version = "0.16", features = ["serde"] }
numpy = "0.22"
rand = "0.8"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
pyo3-build-config = "0.22"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
