[package]
name = "alphastack-desktop"
version = "0.1.0"
description = "AlphaStack Desktop — cross-platform trading terminal"
authors = ["AlphaStack Team"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "alphastack_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
  "system-tray",
  "notification-all",
  "shell-open",
  "window-start-dragging",
  "window-close",
  "window-hide",
  "window-show",
  "window-unminimize",
  "window-minimize",
  "window-maximize",
  "window-unmaximize",
  "path-all",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.10"

[features]
custom-protocol = ["tauri/custom-protocol"]
